--- a/main.css
+++ b/main.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  /* background: #000; */
+  background: #000;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -27,13 +28,8 @@ body {
   font-family: 'Do Hyeon', sans-serif;
 }
 
-/* 
-.wrapper > * {
-  margin: 10px;
-} */
-
 .gameBoyFrame {
-  height: 53em;
+  height: 90vh;
   /* width: 50vw; */
   background: var(--gameFrame-gradient);
   padding: 2.5em;
@@ -94,4 +90,19 @@ body {
   box-sizing: content-box;
   border: 0.1em solid #111111;
   border-radius: 0.2em;
+}
+
+
+
+/* media queries */
+@media (max-width: 800px) {
+  .gameBoyFrame {
+    transform: scale(0.9);
+  }
+}
+
+@media (max-width: 500px) {
+  .gameBoyFrame {
+    transform: scale(0.7);
+  }
 }
